# astral

./: .gitignore  Cargo.toml  README.md
data/: gen-star-data.sh  star_data.csv
src/: ascii_art.rs  astro_wip.rs  coords.rs  lib.rs  moon.rs  planet.rs  star.rs  sun.rs  util.rs
