[package]
authors = ["manguluka <tali@manguluka.com>"]
description = "High level astronomy library."
license = "MIT"
name = "astral"
version = "0.3.1"
repository = "https://github.com/manguluka/astral"
homepage = "https://github.com/manguluka/astral"
keywords = ["astronomy", "planets","stars"]
categories = ["science", "algorithms",""]

[dependencies]
assert_approx_eq = "1.0.0"
astro = "2.0.0"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
vsop87 = "2.0.3"
csv = "1.0.0-beta.5"

